# fastestmcp

./: .pre-commit-config.yaml  FASTESTMCP_CLI.md  LICENSE  MANIFEST.in  README.md  cli-cheatsheet.md  llm.txt  mcp-mvp-examples.md  pyproject.toml  pytest.ini  requirements.txt  run-fastestmcp.py  run-fastestmcp.sh  setup.py  test_test-server.py  test_weather-app.py
.github/prompts/: fastestmcp.prompt.md
.github/workflows/: ci.yml
demo/demo_client_client/: README.md
demo/demo_server/: pyproject.toml
docs/: README.md  repo-reorganization-2025-09-03.md
docs/architecture/: FASTESTMCP_LAUNCH.md  IMPROVED_CLIENT_ARCHITECTURE.md  modelcontextprotocol-architecture.md
docs/cli/: cli-cheatsheet.md
docs/developer/: builder-readme.md  client-readme.md  components-readme.md  fastestmcp-readme.md  openapi-tutorial.md  server-readme.md  stdio-readme.md
docs/document/: MCP-Client-Guide.md  MCP-Client-Server-Interaction.md  MCP-Server-Guide.md  README.md  areas_of_responsibility.md  client_vs_server_discussion.md  context_management_approaches.md  llm_router_call_flow.md
docs/examples/: mcp-mvp-examples.md
src/: .py  pyproject.toml  test.py  test_.py  test_test.py
src/client/: README.md  client.py  context_structure.yaml
src/fastestmcp/: README.md  __init__.py  cli.py  demo.py  pyproject.toml  setup.py
src/relative_dir/: pyproject.toml  (+1 more)
tests/: helpers.py  test_cli_argument_parsing.py  test_cli_combination_validation.py  test_cli_commands.py  test_cli_error_handling.py  test_cli_generation.py  test_cli_integration.py  test_cli_output_formatting.py
(+140 files in other folders)
