[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastestmcp"
version = "1.0.2"
description = "Generate production-ready MCP servers and clients in seconds with the FastestMCP CLI"
authors = [
    {name = "Orchestrate LLC", email = "Joshua@orchestrate.solutions"},
]
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.28.0",
]
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
fastestmcp = "fastestmcp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = "-v --tb=short --pythonpath=src"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
